Update mutter for Buster.  Our patch does not apply so not hooked to the build.  We have to evaluate if this patch is worth the effort of maintaining.  The other patch, "puavo_ungrab_pointer_with_an_ugly_big_hammer.patch" is dropped in the hopes that we do not have to do that anymore.

--- a/debs/mutter/debian/rules
+++ b/debs/mutter/debian/rules
@@ -1,7 +1,6 @@
 #!/usr/bin/make -f
 
--include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
-
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,--as-needed
 
 %:
@@ -12,6 +11,7 @@ override_dh_autoreconf:
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 CONFFLAGS = \
+	--enable-egl-device \
 	--enable-wayland \
 	--enable-native-backend
 else
@@ -23,22 +23,58 @@ CONFFLAGS += \
 	--disable-native-backend
 endif
 
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH),armel armhf))
+CONFFLAGS += \
+	--with-default-driver=gles2
+else
+CONFFLAGS += \
+	--with-default-driver=gl
+endif
+
+# pipewire is not in Ubuntu main yet
+ifneq ($(shell dpkg-vendor --query vendor),Ubuntu)
+ifeq ($(DEB_HOST_ARCH_OS),linux)
+	CONFFLAGS += --enable-remote-desktop
+endif
+endif
+
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libexecdir="\$${prefix}/lib/mutter" \
 		--enable-startup-notification \
 		--enable-compile-warnings \
+		--disable-cogl-gles2 \
+		--enable-gles2 \
+		--with-gles2-libname=libGLESv2.so.2 \
 		$(CONFFLAGS)
 
+# Ignore test failures on hurd & kfreebsd. Although the test results
+# indicate there may be a serious issue, the port maintainers may
+# prefer we do the build anyway. I plan to file a bug for this later.
+# Don't run the tests on mips since they either time out or fail too much,
+# blocking migration to testing
+override_dh_auto_test:
+ifneq (,$(filter hurd-i386 kfreebsd-i386 kfreebsd-amd64,$(DEB_HOST_ARCH)))
+	-xvfb-run -a dh_auto_test
+else ifeq (,$(filter mips mipsel,$(DEB_HOST_ARCH)))
+	xvfb-run -a dh_auto_test
+endif
+
 override_dh_install:
-	dh_install --list-missing
+	find debian/tmp -name '*.la' -print -delete
+	dh_install
+
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_girepository:
 	dh_girepository /usr/lib/$(DEB_HOST_MULTIARCH)/mutter
 
 override_dh_makeshlibs:
-	dh_makeshlibs -V'libmutter0i (>= 3.21.0)'
+	dh_makeshlibs -V
+
+override_dh_shlibdeps:
+	dh_shlibdeps -Llibmutter-3-0 -l/usr/lib/$(DEB_HOST_MULTIARCH)/mutter
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='mutter-dbg (<< 3.18.3-2~)'
-
