Add "ubuntu-wallpapers" puavo-pkg package.
Let's try to avoid adding anything else to apt sources except
buster* related things.  Should contain all wallpapers we have
previously had, plus ones from Yakkety and Zesty.

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -56,6 +56,7 @@ packagedirs += smartboard
 packagedirs += spotify-client
 packagedirs += tilitin
 packagedirs += t-lasku
+packagedirs += ubuntu-wallpapers
 packagedirs += vidyo-client
 packagedirs += vstloggerpro
 
