--- a/debs/Makefile
+++ b/debs/Makefile
@@ -5,7 +5,7 @@ _pkgs_builddeps :=
 _pkgs_parts := puavo-ds puavo-os
 # XXX gvfs not added to build, because it is unclear
 # XXX if there is any benefit to do so
-_pkgs_ports := gnome-shell grub2 nbd openldap wine
+_pkgs_ports := gnome-shell grub2 nbd openldap vtun wine
 
 _pkgs_image     := $(_pkgs_builddeps) $(_pkgs_parts) $(_pkgs_ports)
 _pkgs_cloud     := krb5 openldap puavo-ds
