Fix openboard build dependencies (fails on linking stage without these).

--- a/debs/openboard/debian/control
+++ b/debs/openboard/debian/control
@@ -3,8 +3,14 @@ Section: education
 Priority: extra
 Maintainer: Puavo Org <dev@opinsys.fi>
 Build-Depends: debhelper (>= 8),
+ libass-dev,
  libavcodec-dev,
  libavformat-dev,
+ libbz2-dev,
+ libfdk-aac-dev,
+ libmp3lame-dev,
+ libogg-dev,
+ libopus-dev,
  libpaper-dev,
  libpng-dev,
  libqt5svg5-dev,
@@ -12,6 +18,11 @@ Build-Depends: debhelper (>= 8),
  libqt5xmlpatterns5-dev,
  libssl-dev,
  libswscale-dev,
+ libtheora-dev,
+ libva-dev,
+ libvorbis-dev,
+ libvpx-dev,
+ libx264-dev,
  qt5-default,
  qtbase5-dev,
  qtbase5-dev-tools,
