Install "fonts-ubuntu" so puavo-usb-factory looks as it should.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -78,6 +78,7 @@ Description: Puavo autopoweroff
 Package: puavo-usb-factory
 Architecture: all
 Depends: ${misc:Depends},
+ fonts-ubuntu,
  python3,
  tcl8.6,
  tcllib,
