Add "epiphany" to the Internet-menu, but do not show it by default.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -151,6 +151,8 @@ programs:
   - eog:
         icon: /usr/share/icons/Faenza/apps/scalable/eog.svg
         tags: default
+  - epiphany:
+        tags: epiphany
   - eric:
         tags: default
   - evince:
@@ -995,6 +997,7 @@ menus:
             - firefox
             - chromium
             - google-chrome
+            - epiphany
             - thunderbird
             - evolution
             - pidgin
