Handle "puavo.xsessions.user_registration.enabled" so that if it is set to "true", we automatically start up a special guest session for user registration.

--- a/parts/user-registration/Makefile
+++ b/parts/user-registration/Makefile
@@ -1,7 +1,6 @@
 prefix = /usr
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
-sbindir = $(exec_prefix)/sbin
 datarootdir = $(prefix)/share
 
 INSTALL = install
@@ -13,13 +12,13 @@ all:
 
 .PHONY: installdirs
 installdirs:
-	mkdir -p $(DESTDIR)$(sbindir)
+	mkdir -p $(DESTDIR)$(bindir)
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-conf/definitions
 	mkdir -p $(DESTDIR)$(datarootdir)/puavo-user-registration
 
 .PHONY: install
 install: installdirs
-	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) puavo-user-registration
+	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) puavo-user-registration
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-conf/definitions \
 		puavo-user-registration.json
 	$(INSTALL_DATA) -t $(DESTDIR)$(datarootdir)/puavo-user-registration \
