--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -119,6 +119,10 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-usb-factory
 
+	$(MAKE) -C user-registration				\
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-user-registration
+
 	$(MAKE) -C vpn/client				\
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-vpn-client
