Fix puavo-user-registration (in)visibility in puavomenu.

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -623,7 +623,8 @@ programs:
   - processing:
         tags: default
   - puavo-user-registration:
-        tags: default
+        condition: user_registration
+        tags: user_registration
   - pycharm:
         tags: default
   - python-club:
