Show puavo-laptop-setup in puavomenu sidebar if a personally administered host and user is primary user.

--- a/parts/laptop-setup/puavo-laptop-setup.desktop
+++ b/parts/laptop-setup/puavo-laptop-setup.desktop
@@ -5,7 +5,7 @@ Name[fi]=Kannettavan asetukset
 GenericName=Puavo Laptop Setup
 Comment=Tool for setting up laptop configuration
 Exec=puavo-laptop-setup
-Icon=computer
+Icon=drive-harddisk-system
 Terminal=false
 Type=Application
 Categories=Utils;
