Fix a misspelled puavopkg package ID (vstloggerpro)

--- a/rules/puavomenu/templates/menudata/50-default.yml
+++ b/rules/puavomenu/templates/menudata/50-default.yml
@@ -448,7 +448,7 @@ programs:
         name: LoggerPro
         tags: default
         puavopkg:
-            id: vstloggerpto
+            id: vstloggerpro
   - luola:
         tags: default, game
 
