--- a/parts/ltsp/puavo-install/Makefile
+++ b/parts/ltsp/puavo-install/Makefile
@@ -30,6 +30,7 @@ installdirs :
 install : installdirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-client-daemon \
+		puavo-disk-clone \
 		puavo-install \
 		puavo-install-and-update-ltspimages \
 		puavo-install-grub \
